--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Hello Snowflake{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
+            <link rel="stylesheet" href="./assets/lib/bootstrap.min.css">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +15,9 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('common/_header.html.twig')}}
         {% block body %}{% endblock %}
+        {{ include('common/_footer.html.twig')}}
+        <script src="assets/lib/bootstrap.min.js"></script>
     </body>
 </html>
