--- a/templates/snowflake/create.html.twig
+++ b/templates/snowflake/create.html.twig
@@ -1,4 +1,10 @@
-{{ form_start(form)}}
-    {{ form_widget(form) }}
-    <input type="submit" value="Envoyer">
-{{ form_end (form) }}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    {{ form_start(form)}}
+        <div class="form-control">
+        {{ form_widget(form) }}
+        </div>
+        <input type="submit" value="Envoyer">
+    {{ form_end (form) }}
+{% endblock %}
